Fix most of the issues found by SonarQube